Updated Index.html and video files

--- a/Index.html
+++ b/Index.html
@@ -606,7 +606,8 @@
     </style>
     <div class="centered-container">
         <div class="video-text-mask">
-            <video src="TAJ MAHAL ● India 【4K】 Cinematic [2021] - 2160.mp4" autoplay loop muted playsinline></video>
+            <video src="TAJ MAHAL ● India 【4K】 Cinematic [2021] - 2160 (online-video-cutter.com) (1) (1).mp4" autoplay
+                loop muted playsinline></video>
             <h2>Indian-Tourism</h2>
             <ul>
                 <li><a href="#">Home</a></li>
