Updated content in About, Contact, Feedback, Gallery, and Services pages

--- a/Contact.html
+++ b/Contact.html
@@ -288,7 +288,7 @@
             <div class="brand">Indian‑Tourism</div>
             <nav>
                 <ul>
-                    <li><a href="#" onclick="goTo('Index.html')">Home</a></li>
+                    <li><a href="#" onclick="goTo('index.html')">Home</a></li>
                     <li><a href="#" onclick="goTo('About.html')">About</a></li>
                     <li><a href="#" onclick="goTo('Services.html')">Services</a></li>
                     <li><a href="#" onclick="goTo('Gallery.html')">Gallery</a></li>
