--- a/About.html
+++ b/About.html
@@ -347,7 +347,7 @@
             <div class="brand">Indian‑Tourism</div>
             <nav>
                 <ul>
-                    <li><a href="#" onclick="goTo('Index.html')">Home</a></li>
+                    <li><a href="#" onclick="goTo('index.html')">Home</a></li>
                     <li><a href="#" onclick="goTo('About.html')" class="active">About</a></li>
                     <li><a href="#" onclick="goTo('Services.html')">Services</a></li>
                     <li><a href="#" onclick="goTo('Gallery.html')">Gallery</a></li>
