--- a/Gallery.html
+++ b/Gallery.html
@@ -205,7 +205,7 @@
             <div class="brand">Indian‑Tourism</div>
             <nav>
                 <ul>
-                    <li><a href="#" onclick="goTo('Index.html')">Home</a></li>
+                    <li><a href="#" onclick="goTo('index.html')">Home</a></li>
                     <li><a href="#" onclick="goTo('About.html')">About</a></li>
                     <li><a href="#" onclick="goTo('Services.html')">Services</a></li>
                     <li><a href="#" onclick="goTo('Gallery.html')" class="active">Gallery</a></li>
